--- a/eli.css
+++ b/eli.css
@@ -4,3 +4,4 @@
 @import "eli-forms.css";
 @import "mdi/css/animate.css";
 @import "mdi/css/materialdesignicons.min.css";
+@import "swal/sweetalert2.min.css";
