--- a/eli-grid.css
+++ b/eli-grid.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap&subset=latin-ext');
 html { }
-body { margin:0 auto; font-family: 'DM Sans', sans-serif; line-height:1.5; font-size:1em; }
+body { margin:0 auto; font-family: 'DM Sans', sans-serif; line-height:1.5; font-size:1em; min-height:100vh; }
 
 
 /**
@@ -103,6 +103,27 @@ header.h1r1a > nav { justify-content: left;  }
 .h1r1  { display:grid; grid-template-columns:1fr auto; grid-gap:1em; align-items: center; justify-content:center; }
 .h1r1 .brand { grid-column:1/3; }
 header.h1r1 > nav { text-align: center;}
+.h1r1a,.h1r1 { padding-bottom:.5em; }
+
+@media (max-width:800px) {
+  header { position:relative; }
+  header::after { content:"\f35c"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:2em; justify-self: end;}
+  header nav { display:none; grid-auto-flow:row; }
+  header .brand {  justify-self:left; }
+  .ha1 { grid-template-columns:1fr auto; justify-items:start; }
+  .h1a1 { grid-template-columns:1fr 1fr 1fr;   }
+  .h1a1 .brand {  justify-self:center; }
+  header nav.social { display:grid; grid-auto-flow: column; }
+  .h1r1a { grid-template-columns:repeat(3,1fr); justify-items:center; }
+  .h1r1 { grid-template-columns:repeat(2,1fr); justify-items:center; }
+  .h1r1a .brand,.h1r1 .brand {  grid-column:unset; justify-self:left; }
+
+  nav.active:not(.social) { animation:zoomIn 1s; z-index:3; position:fixed; width:100vw; height:100%; top:0; left:0; right:0; bottom:0; display:grid; background:rgba(0,0,0,.9); color:rgba(255,255,255,.7); align-items:center; align-content: center; justify-content:center; font-size:2rem; overflow:hidden; overflow-y:auto; }
+  nav.active:not(.social)::before { position:fixed; top:.5em; right:.5em; content:"\f5ad"; font-family: "Material Design Icons"; color:inherit; cursor:pointer; font-size:1.5em; justify-self: end; color:rgba(255,0,0,.8); }
+
+}
+
+
 
 /* Grid */
 .g { display:grid; }
