--- a/eli-helpers.css
+++ b/eli-helpers.css
@@ -2,3 +2,7 @@
 .border-dashed-2 { border:2px dashed rgba(0,0,0,.9); }
 .border-dashed-3 { border:3px dashed rgba(0,0,0,.9); }
 .border-dashed-4 { border:4px dashed rgba(0,0,0,.9); }
+
+
+/* Buttons */
+.btn {  }
