--- a/eli-grid.css
+++ b/eli-grid.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap&subset=latin-ext');
 html { }
 body { margin:0 auto; font-family: 'DM Sans', sans-serif; line-height:1.5; font-size:1em; min-height:100vh; }
 
@@ -86,10 +85,10 @@ p { margin:0 auto; text-align: justify; }
 .g.show { display: grid!important; }
 
 /* Navbar */
-header { padding:0px 1em; border:1px solid rgba(0,0,0,.08); align-items: center;}
+header { padding:0px 1em; border:0px solid rgba(0,0,0,.08); align-items: center; z-index:3; }
 header .brand  img { max-height:67px; display:block; margin:0 auto; padding:.4em; }
-header nav { display:grid; grid-auto-flow: column; grid-gap:1em; }
-header nav .mdi { font-size:1.5em; }
+header nav { z-index:4; display:grid; grid-auto-flow: column; grid-gap:1em; align-items: center; }
+header nav .mdi:before { font-size:1.5em; }
 img.circle { border-radius:100%; }
 header nav a { text-decoration: none; color:inherit; }
 .ha1 { display:grid; grid-template-columns:auto 1fr; grid-gap:1em; align-items: center; }
@@ -104,6 +103,9 @@ header.h1r1a > nav { justify-content: left;  }
 .h1r1 .brand { grid-column:1/3; }
 header.h1r1 > nav { text-align: center;}
 .h1r1a,.h1r1 { padding-bottom:.5em; }
+header.sticky { position: sticky; top:0px; left:0px; right:0px;  align-self:start; }
+header.fixed { position: fixed; top:0px; left:0px; right:0px;  align-self:start; }
+
 
 @media (max-width:800px) {
   header { position:relative; }
@@ -127,6 +129,7 @@ header.h1r1 > nav { text-align: center;}
 
 /* Grid */
 .g { display:grid; }
+.g.form { grid-gap:.7em; margin:0 auto; align-self: start; }
 
 
 /* g = general */
